--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -832,9 +832,10 @@ $carousel-control-font-size:                  64px !default;
 $carousel-indicator-active-bg:                $carousel-text-color !default;
 $carousel-indicator-border-color:             $carousel-text-color !default;
 $carousel-caption-color:                      $carousel-text-color !default;
+$carousel-border-color:                       #ededed;
 
 // Meets 3:1 for large text (if using small text this should meet contrast of 4.5:1 to $carousel-text-color)
-$carousel-mask-bg-color:                      rgba($theme-bg-lighter, 0.55) !default;
+$carousel-mask-bg-color:                      rgba(0, 0, 0, 0.4) !default;
 $carousel-link-underline-color:               lighten($brand-primary, 20%);
 
 
