--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -20,7 +20,7 @@ body > header {
 .language-selector {
   text-transform: capitalize;
 
-  .dropdown-toggle {
+  .btn.dropdown-toggle {
     @include form-controls-style();
     text-transform: capitalize;
     padding: $padding-base-horizontal 15px;
@@ -28,23 +28,8 @@ body > header {
 
   .dropdown-toggle:focus,
   &.open .dropdown-toggle {
+    @include form-controls-style();
     box-shadow: none;
-    border-color: $dropdown-bg;
-    background-color: $navbar-default-link-active-color;
-
-    // Requires nesting
-    &.btn {
-      background-color: $navbar-default-link-active-color;
-      color: $link-color;
-    }
-
-    &:hover,
-    &:active {
-      background-color: $navbar-default-link-active-color;
-      color: $link-color;
-      box-shadow: none;
-      border-color: $dropdown-bg;
-    }
   }
 
   .dropdown-menu {
@@ -56,33 +41,53 @@ body > header {
     > .active > a:focus {
       @include outline-focus();
     }
+
+    > li > a {
+      color: $gray-dark;
+    }
   }
 }
 
 // These must be separate to work
 .site-header-search .form-control::-webkit-input-placeholder {
   color: $navbar-default-link-active-color;
+  @include theme-contrast-color('header');
 }
 
 .site-header-search .form-control:-moz-placeholder {
   color: $navbar-default-link-active-color;
+  @include theme-contrast-color('header');
 }
 
 .site-header-search .form-control::-moz-placeholder {
   color: $navbar-default-link-active-color;
+  @include theme-contrast-color('header');
 }
 
 .site-header-search .form-control:-ms-input-placeholder {
   color: $navbar-default-link-active-color;
+  @include theme-contrast-color('header');
 }
 
 // Main site header search
 .site-header-search {
 
+  .input-group {
+  }
+
   .form-control,
   button[type="submit"] {
     height: $navbar-height;
     @include form-controls-style();
+    border: 1px solid $brand-primary;
+    @include theme-color('accent', 'border-color');
+
+    // Special case for white/light-grey theme
+    body.theme-header-white &,
+    body.theme-header-light-grey & {
+      background: #FFF;
+      border-color: rgba($gray, .4);
+    }
 
     &:focus {
       @include outline-focus();
@@ -93,11 +98,13 @@ body > header {
     box-shadow: none;
     padding: $padding-large-vertical $padding-large-horizontal;
     height: ($line-height-computed + ($padding-large-vertical * 2) + 2);
+    border-right: none;
   }
 
   // Search button hover
-  .btn {
+  .btn[type="submit"] {
     padding: $padding-large-vertical $padding-large-horizontal;
+    border-left: none;
 
     &:active:hover,
     &:active:focus,
