--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -145,7 +145,7 @@
 
       .active > a,
       .active > a:hover,
-      .active > a:hover {
+      .active > a:focus {
         @include theme-color('accent', 'background-color');
       }
     }
