--- a/src/scss/utils/mixins.scss
+++ b/src/scss/utils/mixins.scss
@@ -4,7 +4,7 @@
 @mixin form-controls-style() {
   background: transparent;
   border: none;
-  color: #FFF;
+  color: $btn-primary-color;
   @include theme-contrast-color('header');
 }
 
