SWI-10: Update references to default colours with theme colours

--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -15,9 +15,7 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-color: $navbar-default-bg;
     min-height: 360px;
-    border-top: 1px solid rgba($theme-bg-lighter, .5);
     color: $carousel-text-color;
     @include theme-contrast-color('carousel');
 
@@ -36,8 +34,6 @@
 
     // Remove lighter border-top if there is an image
     &.carousel-has-image[class] {
-      border-top-color: $theme-bg;
-
       h1,
       h2,
       h3,
@@ -147,7 +143,7 @@
   }
 
   &:hover {
-    background-color: rgba($theme-bg-lighter, .2);
+    background-color: rgba($gray-base, .2);
   }
 
   &:focus {
