--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -7,6 +7,7 @@
   // Horizontal divder line
   hr {
     border-top: 1px solid $theme-bg-lighter;
+    @include theme-contrast-color('footer', 'border-color');
     margin-bottom: $line-height-computed * 1.5;
 
     @media (min-width: $screen-md-min) {
@@ -49,6 +50,7 @@
     height: calc(100% + 12px);
     position: absolute;
     border: 1px solid $theme-bg-lighter;
+    @include theme-contrast-color('footer', 'border-color');
     right: 10px;
     top: -6px;
   }
