--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -187,6 +187,14 @@
         }
       }
 
+      // hide nav item border bottom with dropdown
+      &.dropdown > a.link {
+        &:focus,
+        &:hover {
+          border-bottom-color: $navbar-default-brand-hover-bg;
+        }
+      }
+
       > .dropdown-menu {
         margin-top: (-$nav-hover-border-width - 1px);
         margin-left: -1px;
