--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -17,11 +17,11 @@
     background-repeat: no-repeat;
     min-height: 360px;
     color: $carousel-text-color;
-    @include theme-contrast-color('carousel');
+    @include theme-contrast-color('carousel', 'color');
 
     a {
       color: $carousel-text-color;
-      @include theme-contrast-color('carousel');
+      @include theme-contrast-color('carousel', 'color');
     }
 
     h1,
@@ -29,7 +29,7 @@
     h3,
     p {
       color: $carousel-text-color;
-      @include theme-contrast-color('carousel');
+      @include theme-contrast-color('carousel', 'color');
     }
 
     // Remove lighter border-top if there is an image
@@ -61,7 +61,7 @@
     .btn {
       margin-left: 10px;
       margin-right: 10px;
-      @include theme-contrast-color('accent');
+      @include theme-contrast-color('accent', 'color');
 
       @media (max-width: $screen-xs-max) {
         margin-bottom: 10px;
@@ -72,7 +72,7 @@
       position: relative;
       border: 1px solid lighten($brand-primary, 20%);
       @include theme-color('accent','border-color');
-      @include theme-contrast-color('carousel');
+      @include theme-contrast-color('carousel', 'color');
       padding: 12px 16px;
       transition: all 0.3s ease;
 
