--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -9,10 +9,10 @@ body > header {
 }
 
 .site-header {
-  @include theme-contrast-color('header');
+  @include theme-contrast-color('header', 'color');
 
   a {
-    @include theme-contrast-color('header');
+    @include theme-contrast-color('header', 'color');
   }
 }
 
@@ -50,22 +50,22 @@ body > header {
 // These must be separate to work
 .site-header-search .form-control::-webkit-input-placeholder {
   color: $navbar-default-link-active-color;
-  @include theme-contrast-color('header');
+  @include theme-contrast-color('header', 'color');
 }
 
 .site-header-search .form-control:-moz-placeholder {
   color: $navbar-default-link-active-color;
-  @include theme-contrast-color('header');
+  @include theme-contrast-color('header', 'color');
 }
 
 .site-header-search .form-control::-moz-placeholder {
   color: $navbar-default-link-active-color;
-  @include theme-contrast-color('header');
+  @include theme-contrast-color('header', 'color');
 }
 
 .site-header-search .form-control:-ms-input-placeholder {
   color: $navbar-default-link-active-color;
-  @include theme-contrast-color('header');
+  @include theme-contrast-color('header', 'color');
 }
 
 // Main site header search
