--- a/src/scss/components/nav.scss
+++ b/src/scss/components/nav.scss
@@ -5,16 +5,16 @@
     margin-right: 0;
 
     .icon-bar {
-      @include theme-contrast-color('header', 'background-color');
+      @include theme-contrast-color("header", "background-color");
     }
   }
 }
 
 .navbar-default {
-  @include theme-color('nav', 'background-color');
+  @include theme-color("nav", "background-color");
 
   .btn-link {
-    @include theme-contrast-color('nav', 'color');
+    @include theme-contrast-color("nav", "color");
   }
 }
 
@@ -22,7 +22,7 @@
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover {
   background-color: transparent;
-  @include theme-contrast-color('nav', 'color');
+  @include theme-contrast-color("nav", "color");
 }
 
 .main-nav {
@@ -37,19 +37,19 @@
   }
 
   .navbar-nav > li > a {
-    @include theme-contrast-color('nav', 'color');
+    @include theme-contrast-color("nav", "color");
   }
 
   .nav-item.current > a {
     background-color: $brand-primary;
-    @include theme-color('accent', 'background-color');
-    @include theme-contrast-color('accent', 'color');
+    @include theme-color("accent", "background-color");
+    @include theme-contrast-color("accent", "color");
 
     &:focus,
     &:hover {
       background-color: $brand-primary;
-      @include theme-color('accent', 'background-color');
-      @include theme-contrast-color('accent', 'color');
+      @include theme-color("accent", "background-color");
+      @include theme-contrast-color("accent", "color");
     }
   }
 
@@ -75,13 +75,13 @@
       &:hover .navbar-touch-caret,
       &:focus .navbar-touch-caret {
         background: $brand-primary;
-        @include theme-color('accent', 'background-color');
-        @include theme-contrast-color('accent', 'color');
+        @include theme-color("accent", "background-color");
+        @include theme-contrast-color("accent", "color");
 
         &:hover,
         &:focus {
           background-color: $brand-primary;
-          @include theme-color('accent', 'background-color');
+          @include theme-color("accent", "background-color");
         }
       }
     }
@@ -99,7 +99,7 @@
     }
 
     .navbar-form {
-      @include theme-color('header', 'background-color');
+      @include theme-color("header", "background-color");
       margin-top: 0;
       border-top: 1px solid $navbar-border-color;
       border-color: $navbar-border-color;
@@ -129,7 +129,7 @@
       &:hover:before,
       &:focus:before {
         background: $brand-primary;
-        @include theme-color('accent', 'background-color');
+        @include theme-color("accent", "background-color");
       }
     }
 
@@ -148,24 +148,24 @@
         padding: 0;
         // Requires nesting
         background-color: $theme-bg-lighter;
-        @include theme-color('nav', 'background-color');
+        @include theme-color("nav", "background-color");
       }
     }
 
     .open .dropdown-menu {
       > li > a {
         padding: 10px 15px 10px 35px;
-        @include theme-contrast-color('nav', 'color');
+        @include theme-contrast-color("nav", "color");
 
         &:hover {
-          @include theme-contrast-color('nav', 'color');
+          @include theme-contrast-color("nav", "color");
         }
       }
 
       .active > a,
       .active > a:hover,
       .active > a:focus {
-        @include theme-color('accent', 'background-color');
+        @include theme-color("accent", "background-color");
       }
     }
   }
@@ -191,18 +191,18 @@
         &:focus,
         &:hover {
           border-bottom-color: $brand-primary;
-          @include theme-color('accent', 'border-bottom-color');
+          @include theme-color("accent", "border-bottom-color");
         }
       }
 
       > .current {
         border-bottom: $nav-hover-border-width solid $brand-primary;
-        @include theme-color('accent', 'border-bottom-color');
+        @include theme-color("accent", "border-bottom-color");
 
         &:focus,
         &:hover {
           border-bottom-color: $brand-primary;
-          @include theme-color('accent', 'border-bottom-color');
+          @include theme-color("accent", "border-bottom-color");
         }
       }
 
@@ -225,7 +225,7 @@
 
       .dropdown-menu > .active > a {
         color: $navbar-default-link-active-color;
-        @include theme-color('accent', 'background-color');
+        @include theme-color("accent", "background-color");
       }
     }
 
@@ -248,7 +248,7 @@
 
       &.current .navbar-touch-caret {
         border-bottom: $nav-hover-border-width solid $brand-primary;
-        @include theme-color('accent', 'border-bottom-color');
+        @include theme-color("accent", "border-bottom-color");
       }
     }
   }
@@ -261,7 +261,7 @@
     &:hover,
     &:focus {
       color: $nav-pills-active-link-hover-color;
-      @include theme-color('accent', 'background-color');
+      @include theme-color("accent", "background-color");
     }
   }
 }
