--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -17,11 +17,11 @@
     background-repeat: no-repeat;
     min-height: 360px;
     color: $carousel-text-color;
-    @include theme-contrast-color('carousel', 'color');
+    @include theme-contrast-color("carousel", "color");
 
     a {
       color: $carousel-text-color;
-      @include theme-contrast-color('carousel', 'color');
+      @include theme-contrast-color("carousel", "color");
     }
 
     h1,
@@ -29,7 +29,7 @@
     h3,
     p {
       color: $carousel-text-color;
-      @include theme-contrast-color('carousel', 'color');
+      @include theme-contrast-color("carousel", "color");
     }
 
     // Remove lighter border-top if there is an image
@@ -61,7 +61,7 @@
     .btn {
       margin-left: 10px;
       margin-right: 10px;
-      @include theme-contrast-color('accent', 'color');
+      @include theme-contrast-color("accent", "color");
 
       @media (max-width: $screen-xs-max) {
         margin-bottom: 10px;
@@ -71,14 +71,14 @@
     .btn-link {
       position: relative;
       border: 1px solid lighten($brand-primary, 20%);
-      @include theme-color('accent','border-color');
-      @include theme-contrast-color('carousel', 'color');
+      @include theme-color("accent", "border-color");
+      @include theme-contrast-color("carousel", "color");
       padding: 12px 16px;
       transition: all 0.3s ease;
 
       &:hover {
         border-color: lighten($brand-primary, 40%);
-        @include theme-color('accent', 'border-color', 'lighten', 20%);
+        @include theme-color("accent", "border-color", "lighten", 20%);
       }
     }
   }
@@ -100,7 +100,7 @@
   // Custom carousel link style for theme
   a {
     border-bottom: 1px solid lighten($brand-primary, 20%);
-    @include theme-color('accent', 'border-bottom-color');
+    @include theme-color("accent", "border-bottom-color");
     text-decoration: none;
 
     div.carousel-has-image & {
@@ -108,7 +108,7 @@
     }
 
     &:hover {
-      border-bottom: none;
+      border-bottom: 0;
     }
   }
 }
@@ -196,7 +196,7 @@
 .carousel-mask {
   position: absolute;
   background: $jumbotron-bg;
-  @include theme-color('carousel', 'background-color');
+  @include theme-color("carousel", "background-color");
   top: 0;
   left: 0;
   width: 100%;
