Shift absolute values into variables

--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -68,11 +68,11 @@ h6,
 
 h1,
 .h1 {
-  font-size: 42px;
+  font-size: $font-size-h1;
   line-height: 1.2;
 
   @media (max-width: $screen-xs-max) {
-    font-size: 36px;
+    font-size: floor(($font-size-base * 2.25));
   }
 
   .theme-font-fira-sans & {
@@ -80,22 +80,22 @@ h1,
   }
 
   .theme-font-merriweather & {
-    font-size: 40px;
+    font-size: floor(($font-size-base * 2.65));
 
     @media (max-width: $screen-xs-max) {
-      font-size: 36px;
+      font-size: floor(($font-size-base * 2.25));
     }
   }
 }
 
 h2,
 .h2 {
-  font-size: 32px;
+  font-size: $font-size-h2;
   font-weight: 600;
   line-height: 1.2;
 
   @media (max-width: $screen-xs-max) {
-    font-size: 28px;
+    font-size: floor(($font-size-base * 1.75));
   }
 
   .theme-font-fira-sans & {
@@ -109,7 +109,7 @@ h2,
 
 h3,
 .h3 {
-  font-size: 24px;
+  font-size: $font-size-h3;
 
   .theme-font-fira-sans & {
     font-weight: 500;
@@ -125,7 +125,7 @@ h4,
 
 h5,
 .h5 {
-  font-size: 18px;
+  font-size: $font-size-h5;
 
   .theme-font-fira-sans & {
     font-weight: 600;
@@ -134,7 +134,7 @@ h5,
 
 h6,
 .h6 {
-  font-size: 16px;
+  font-size: $font-size-h6;
 
   .theme-font-fira-sans & {
     font-weight: 600;
@@ -147,7 +147,7 @@ p {
   }
 
   .theme-font-merriweather & {
-    font-size: 14px;
+    font-size: floor(($font-size-base * 0.875));
     line-height: 1.6;
   }
 }
@@ -158,29 +158,29 @@ p {
   margin-bottom: 33px;
 
   @media (max-width: $screen-xs-max) {
-    font-size: 20px;
+    font-size: floor(($font-size-base * 1.25));
   }
 
   .theme-font-merriweather & {
-    font-size: 20px;
+    font-size: floor(($font-size-base * 1.25));
     line-height: 1.5;
   }
 }
 
 blockquote {
   padding: 0 20px;
-  border-left: 5px solid $brand-primary;
+  border-left: 5px solid $blockquote-border-color;
   @include theme-color("accent", "border-color");
 
   p,
   ul,
   ol {
-    font-size: 20px;
+    font-size: $blockquote-font-size;
     font-weight: 300;
     line-height: 1.4;
 
     .theme-font-merriweather & {
-      font-size: 18px;
+      font-size: floor(($font-size-base * 1.125));
       line-height: 1.5;
     }
   }
