--- a/src/scss/components/carousel.scss
+++ b/src/scss/components/carousel.scss
@@ -59,12 +59,13 @@
     }
 
     .btn {
-      margin-left: 10px;
-      margin-right: 10px;
+      margin-left: floor($line-height-computed * 0.45);
+      margin-right: floor($line-height-computed * 0.45);
+      padding: floor($line-height-computed * 0.5) floor(($line-height-computed * 0.7));
       @include theme-contrast-color("accent", "color");
 
       @media (max-width: $screen-xs-max) {
-        margin-bottom: 10px;
+        margin-bottom: floor($line-height-computed * 0.45);
       }
     }
 
@@ -73,7 +74,6 @@
       border: 1px solid lighten($brand-primary, 20%);
       @include theme-color("accent", "border-color");
       @include theme-contrast-color("carousel", "color");
-      padding: 12px 16px;
       transition: all 0.3s ease;
 
       &:hover {
