--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -63,11 +63,11 @@ $font-size-large:         floor(($font-size-base * 1.125)) !default; // ~18px
 $font-size-small:         floor(($font-size-base * 0.875)) !default; // ~14px
 
 $font-size-h1:            floor(($font-size-base * 2.5)) !default; // ~40px
-$font-size-h2:            floor(($font-size-base * 2.125)) !default; // ~34px
-$font-size-h3:            floor(($font-size-base * 1.75)) !default; // ~28px
+$font-size-h2:            floor(($font-size-base * 2.0)) !default; // ~32px
+$font-size-h3:            floor(($font-size-base * 1.5)) !default; // ~24px
 $font-size-h4:            floor(($font-size-base * 1.25)) !default; // ~20px
-$font-size-h5:            $font-size-base !default; // 16px
-$font-size-h6:            floor(($font-size-base * 0.875)) !default; // ~14px
+$font-size-h5:            floor(($font-size-base * 1.125)) !default; // ~18px
+$font-size-h6:            $font-size-base !default; // 16px
 
 //** Unit-less `line-height` for use in components like buttons.
 $line-height-base:        1.5 !default; // 20/14
@@ -881,9 +881,9 @@ $headings-small-color:        $gray-light !default;
 //** Blockquote small color
 $blockquote-small-color:      $gray-light !default;
 //** Blockquote font size
-$blockquote-font-size:        ($font-size-base * 1.25) !default;
+$blockquote-font-size:        floor(($font-size-base * 1.25)) !default; // ~20px
 //** Blockquote border color
-$blockquote-border-color:     $gray-lighter !default;
+$blockquote-border-color:     $brand-primary !default;
 //** Page header border color
 $page-header-border-color:    $gray-dark !default;
 //** Width of horizontal description list titles
